--- a/src/style.css
+++ b/src/style.css
@@ -15,37 +15,39 @@
 }
 
 .navbar {
-    height: 60px;
+    position: absolute;
+    height: 100px;
     width: 100%;
-    position: relative;
+    padding: 0px;
+    /* background: rgba(10, 10, 10, 0.2) */
 }
 
 .logo {
     width: 200px;
     height: auto;
-    padding: 10px 20px;
+    padding: 0 20px;
 }
 
 .navbar ul {
-    margin-right: 25px;
+    margin: 10px 25px;
+    position: relative;
 }
 
 .navbar ul li {
     list-style: none;
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 15px;
     line-height: 80px;
 }
 
 .navbar ul li a {
     text-decoration: none;
-    /* text-transform: uppercase; */
     letter-spacing: 1px;
     font-family: 'Ubuntu', sans-serif;
     font-size: 15px;
-    font-weight: 800;
+    font-weight: bold;
     color: #fff;
-    padding: 6px 20px;
+    padding: 5px 20px;
 }
 
 .navbar ul li a:hover {
@@ -53,11 +55,12 @@
     color: #000;
     border-radius: 25px;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .content {
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Ubuntu', sans-serif;
@@ -86,7 +89,6 @@ span {
 
 .content .buttons {
     margin: 35px 330px;
-    left: 50%;
 }
 
 button{
@@ -100,7 +102,7 @@ button{
     border-radius: 25px;
     border: none;
     outline: none;
-    margin-left: 25px;
+    margin-left: 30px;
     cursor: pointer;
 }
 
