--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,6 @@
     height: 100px;
     width: 100%;
     padding: 0px;
-    /* background: rgba(10, 10, 10, 0.2) */
 }
 
 .logo {
@@ -29,23 +28,23 @@
 }
 
 .navbar ul {
-    margin: 10px 25px;
     position: relative;
+    margin: 10px 25px;
 }
 
 .navbar ul li {
+    position: relative;
     list-style: none;
     display: inline-block;
     margin: 0 15px;
     line-height: 80px;
-    position: relative;
 }
 
 .navbar ul li a {
     text-decoration: none;
     letter-spacing: 1px;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: bold;
     color: #fff;
     padding: 5px 20px;
@@ -69,7 +68,7 @@
 
 .content h1 {
     color: #fff;
-    font-size: 80px;
+    font-size: 5rem;
     font-weight: bold;
     width: 100%;
     text-align: center;
@@ -81,7 +80,7 @@ span {
 
 .content h2 {
     color: #fff;
-    font-size: 50px;
+    font-size: 3rem;
     font-weight: bold;
     width: 1000px;
     text-align: center;
@@ -96,7 +95,7 @@ button{
     width: 140px;
     padding: 8px 0;;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 15px;
+    font-size: 0.9rem;
     font-weight: bold;
     background-color: #fff;
     color: #000;
