updated view width of the background image

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
                 url(./images/abhishek-camera.jpg);    
     background-size: cover;
     background-position: center;
+    width: 100vw;
     height: 100vh;
 }
 
